# colibri

./: .gitignore  ANNOUNCE.txt  CHANGELOG.md  CMakeLists.txt  Doxyfile_common  Doxyfile_internal  Doxyfile_public  HOWTO.md  Makefile  Makefile.64  README.md  TODO.md  cmake-wasm.sh  colAlloc.c  colCollection.c  colCollection.h  colConf.h  colGc.c  colHash.c  colHash.h  colHashInt.h  colInt.h  colInternal.h  colList.c  colList.h  colListInt.h  colMap.c  colMap.h  colMapInt.h  colPlat.h  colPlatform.h  colRope.c  colRope.h  colRopeInt.h  colStrBuf.c  colStrBufInt.h  colTrie.c  colTrie.h  colTrieInt.h  colUtils.h  (+19 more)
InternalDocs/: Menu.txt  Topics.txt
PublicDocs/: Languages.txt  Menu.txt  Topics.txt
docs/: README.md  _coverpage.md  config.js  index.html  test.html  test.md  theme.css
docs/internals/: _navbar.md  _r_e_a_d_m_e_8md.md  col_alloc_8c.md  col_conf_8h.md  col_gc_8c.md  col_hash_8c.md  col_hash_8h.md  col_hash_int_8h.md  col_internal_8h.md  col_list_8c.md  col_list_8h.md  col_list_int_8h.md  col_map_8c.md  col_map_8h.md  col_map_int_8h.md  col_platform_8h.md  col_rope_8c.md  col_rope_8h.md  col_rope_int_8h.md  col_str_buf_8c.md  col_str_buf_8h.md  col_str_buf_int_8h.md  col_trie_8c.md  col_trie_8h.md  col_trie_int_8h.md  col_unix_platform_8c.md  col_unix_platform_8h.md  col_utils_8h.md  col_vector_8c.md  col_vector_8h.md  col_vector_int_8h.md  col_win32_platform_8c.md  col_win32_platform_8h.md  col_word_8c.md  col_word_8h.md  col_word_int_8h.md  colibri_8c.md  colibri_8h.md  compound-list.js  dir_4b68c2fef3e151b6b93d5e93b14f1857.md  (+128 more)
docs/reference/: _r_e_a_d_m_e_8md.md  col_alloc_8c.md  col_conf_8h.md  col_gc_8c.md  col_hash_8c.md  col_hash_8h.md  col_hash_int_8h.md  col_internal_8h.md  col_list_8c.md  col_list_8h.md  col_list_int_8h.md  col_map_8c.md  col_map_8h.md  col_map_int_8h.md  col_platform_8h.md  col_rope_8c.md  col_rope_8h.md  col_rope_int_8h.md  col_str_buf_8c.md  col_str_buf_8h.md  col_str_buf_int_8h.md  col_trie_8c.md  col_trie_8h.md  col_trie_int_8h.md  col_unix_platform_8c.md  col_unix_platform_8h.md  col_utils_8h.md  col_vector_8c.md  col_vector_8h.md  col_vector_int_8h.md  col_win32_platform_8c.md  col_win32_platform_8h.md  col_word_8c.md  col_word_8h.md  col_word_int_8h.md  colibri_8c.md  colibri_8h.md  compound-list.js  dir_4b68c2fef3e151b6b93d5e93b14f1857.md  dir_68267d1309a1af8e8297ef4c3efbcdba.md  (+46 more)
include/: colHash.h  colList.h  colMap.h  colRope.h  colStrBuf.h  colTrie.h  colUtils.h  colVector.h  colWord.h  colibri.h
platform/unix/: colPlat.c  colPlatform.c  colUnixPlatform.c  colUnixPlatform.h
platform/wasi/: colWasiPlatform.c  colWasiPlatform.h
platform/win32/: colPlat.c  colPlatform.c  colWin32Platform.c  colWin32Platform.h
src/: colAlloc.c  colConf.h  colGc.c  colHash.c  colHashInt.h  colInternal.h  colList.c  colListInt.h  colMap.c  colMapInt.h  colPlatform.h  colRope.c  colRopeInt.h  colStrBuf.c  colStrBufInt.h  colTrie.c  colVector.c  colVectorInt.h  colWord.c  colWordInt.h  colibri.c
src/platform/unix/: colUnixPlatform.c
src/platform/win32/: colWin32Platform.c
tests/: picotest.h  testColibri.c  testColibri.h  testImmediateWords.c  testLists.c  testMaps.c  testRopes.c  testStrBufs.c  unitTest.h
tests/tdd/: .clang-format  colibriFixture.h  errors.c  errors.h  failureFixture.h  hooks.h  main.c  mainSuite.inc  ropeUtils.h  testBasicWords.c  testHashMaps.c  testLists.c  testMaps.c  testMutableLists.c  testMutableVectors.c  testRopes.c  testStringBuffers.c  testStrings.c  testTrieMaps.c  testVectors.c  testWords.c  traverse.c  traverse.h
